# genomelake

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
.circleci/: config.yml
genomelake/: __init__.py  backend.py  extractors.py  tiledb_array.py  util.pyx
tests/: test_extractors.py
tests/data/: fasta_test.fa  test_bigwig.bw
