[metadata]
description-file = README.md

[bumpversion]
current_version = 0.1.4
commit = True
tag = True
tag_name = {current_version}

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:genomelake/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'